# azureml-pipeline

./: .gitignore  LICENSE.txt  PipelineStep.py  PipelineWrapper.py  README.md  WorkspaceWrapper.py  azureml_pipeline.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  step1_of_testing_pipeline.py  step2_of_testing_pipeline.py
azureml_wrapper/: PipelineStep.py  PipelineWrapper.py  __init__.py  pipeline_step.py  pipeline_wrapper.py  script_wrapper.py  workspace_wrapper.py
azureml_wrapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: WorkspaceWrapper.py  __init__.py
test/: test_azureml_wrapper.py
