[metadata]
name = azureml_wrapper
description = Wrapper autour du azureml-sdk
author = Vincent Coulombe
license = MIT
license_file = LICENSE.txt
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.7
    
[options]
packages =
    azureml_wrapper
install_requires =
    azureml.core
    azureml.pipeline
    azureml.dataprep.native
    argparse
    numpy
    pandas    
python_requires = <3.8
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
pipeline_step = py.typed
pipeline_wrapper = py.typed
script_wrapper = py.typed
workspace_wrapper = py.typed

[flake8]
max-line-length = 160